--- a/marketplace.html
+++ b/marketplace.html
@@ -42,6 +42,6 @@
     <h2>Payment:</h2>
     <p id="payment-result"></p>
   </div>
-  <script src="script.js"></script>
+  <script src="marketplace.js"></script>
 </body>
 </html>
