--- a/marketplace.html
+++ b/marketplace.html
@@ -2,7 +2,7 @@
 <html lang=en>
 <head>
   <title>Market Place</title>
-  <link rel="stylesheet" src="/marketplace.css" href="style.css">
+  <link rel="stylesheet" href="marketplace.css">
 </head>
 <body>
   <h1>Market Place</h1>
